cmake_minimum_required(VERSION 3.16)
project(tinyMuduo)
add_subdirectory(base)
add_subdirectory(net)
add_executable(test test.cpp net/Channel.cpp net/Channel.h net/Poller.h net/EventLoop.cpp net/EventLoop.h net/EPollPoller.cpp net/EPollPoller.h)
target_link_libraries(test tmuduo_base tmuduo_net pthread)